--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header id="header">
     <nav id="nav-bar">
       <img id="header-img"
-        src="https://document-export.canva.com/gAAvE/DAEgapgAAvE/22/thumbnail/0001-2369804556.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAQYCGKMUHWDTJW6UD%2F20210603%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210603T223744Z&X-Amz-Expires=62436&X-Amz-Signature=c24cdbdf609a15b5d1ec1e6ace2b5dcba6e4acd8534eac517858eec802bdb29d&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2004%20Jun%202021%2015%3A58%3A20%20GMT"
+        src="https://www.canva.com/design/DAEgapgAAvE/9nAG_P6X4Qd2fYMyChQ0hg/view?utm_content=DAEgapgAAvE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
         alt="logo" class="logo">
       <ul>
         <a class="nav-link" href="#features">Features</a>
@@ -116,6 +116,6 @@
     </section>
   </div>
 </body>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+/* <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> */
 
 </html>
